--- a/package.json
+++ b/package.json
@@ -7,14 +7,23 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
+    "format": "prettier --write .",
     "test": "vitest"
   },
   "dependencies": {
+    "@astrojs/solid-js": "^5.0.0",
+    "@astrojs/tailwind": "^5.1.3",
     "astro": "^5.0.3",
-    "deep-equal": "^2.2.3"
+    "deep-equal": "^2.2.3",
+    "solid-js": "^1.9.3",
+    "tailwindcss": "^3.4.16",
+    "url-join": "^5.0.0"
   },
   "devDependencies": {
     "@types/deep-equal": "^1.0.4",
+    "@types/url-join": "^4.0.3",
+    "prettier": "^3.4.2",
+    "prettier-plugin-astro": "^0.14.1",
     "vitest": "^2.1.8"
   }
 }
