--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
   "dependencies": {
     "@astrojs/solid-js": "^5.0.0",
     "@astrojs/tailwind": "^5.1.3",
+    "@fontsource-variable/rubik": "^5.1.0",
     "astro": "^5.0.3",
     "deep-equal": "^2.2.3",
+    "luxon": "^3.5.0",
     "solid-js": "^1.9.3",
     "tailwindcss": "^3.4.16",
     "url-join": "^5.0.0"
   },
   "devDependencies": {
     "@types/deep-equal": "^1.0.4",
+    "@types/luxon": "^3.4.2",
     "@types/url-join": "^4.0.3",
     "prettier": "^3.4.2",
     "prettier-plugin-astro": "^0.14.1",
