--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@astrojs/solid-js": "^5.0.0",
     "@astrojs/tailwind": "^5.1.3",
     "@fontsource-variable/rubik": "^5.1.0",
+    "@fontsource/geist-mono": "^5.1.0",
     "astro": "^5.0.3",
+    "clsx": "^2.1.1",
     "deep-equal": "^2.2.3",
     "luxon": "^3.5.0",
     "solid-js": "^1.9.3",
