--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/url-join": "^4.0.3",
     "prettier": "^3.4.2",
     "prettier-plugin-astro": "^0.14.1",
+    "typescript": "^5.7.2",
     "vitest": "^2.1.8"
   }
 }
