--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@astrojs/cloudflare": "^12.0.1",
     "@astrojs/solid-js": "^5.0.0",
     "@astrojs/tailwind": "^5.1.3",
     "@fontsource-variable/rubik": "^5.1.0",
