--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "deep-equal": "^2.2.3",
     "luxon": "^3.5.0",
+    "solid-icons": "^1.1.0",
     "solid-js": "^1.9.3",
     "tailwindcss": "^3.4.16",
     "url-join": "^5.0.0"
