--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/tailwind": "^5.1.3",
     "@fontsource-variable/rubik": "^5.1.0",
     "@fontsource/geist-mono": "^5.1.0",
+    "@kobalte/core": "^0.13.7",
     "astro": "^5.0.3",
     "clsx": "^2.1.1",
     "deep-equal": "^2.2.3",
