--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 API_TOKEN=
 CLOUDFLARE_API_KEY=
 CLOUDFLARE_EMAIL=
+# This token is used to verify anyone trying to nuke the cache
 CACHE_NUKE_TOKEN=
