--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@astrojs/cloudflare": "^12.4.0",
+    "@astrojs/node": "^9.1.3",
     "@astrojs/solid-js": "^5.0.7",
     "@astrojs/tailwind": "^6.0.2",
     "@fontsource-variable/nunito-sans": "^5.1.0",
