--- a/varnish-cache/default.vcl.template
+++ b/varnish-cache/default.vcl.template
@@ -45,10 +45,8 @@ sub vcl_recv {
 }
 
 sub vcl_backend_response {
-    # Set default TTL for all responses if not defined by backend
-    if (!beresp.ttl > 0s) {
-        set beresp.ttl = 365d;
-    }
+    # Set default TTL for all responses
+    set beresp.ttl = 365d;
 
     # Don't cache 50x responses
     if (beresp.status >= 500 && beresp.status < 600) {
