--- a/astro-server/package.json
+++ b/astro-server/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
+    "convert-images": "tsx ./scripts/convertImages.ts",
     "dev": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
@@ -28,9 +29,12 @@
   "devDependencies": {
     "@types/deep-equal": "^1.0.4",
     "@types/luxon": "^3.4.2",
+    "@types/node": "^22.15.17",
     "@types/url-join": "^4.0.3",
     "prettier": "^3.4.2",
     "prettier-plugin-astro": "^0.14.1",
+    "sharp": "^0.34.1",
+    "tsx": "^4.19.4",
     "typescript": "^5.7.2",
     "vitest": "^2.1.8"
   }
