--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     expose:
       - "4321"
     restart: unless-stopped
+    networks:
+      - app_network
 
   varnish:
     build:
@@ -15,9 +17,28 @@ services:
       dockerfile: Dockerfile
     ulimits:
       memlock: -1
-    ports:
-      - "4322:80"
+    expose:
+      - "80"
     environment:
       - VARNISH_PURGE_TOKEN=${VARNISH_PURGE_TOKEN}
     tmpfs:
       - /var/lib/varnish/varnishd:exec
+    networks:
+      - app_network
+    restart: unless-stopped
+
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/conf.d:/etc/nginx/conf.d:ro
+    depends_on:
+      - varnish
+    networks:
+      - app_network
+    restart: unless-stopped
+
+networks:
+  app_network:
