--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,8 +28,7 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx-config/conf.d:/etc/nginx/conf.d
     depends_on:
       - varnish
     restart: unless-stopped
