--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     expose:
       - "4321"
     restart: unless-stopped
+    networks:
+      - app_network
 
   varnish:
     build:
@@ -21,6 +23,8 @@ services:
       - VARNISH_PURGE_TOKEN=${VARNISH_PURGE_TOKEN}
     tmpfs:
       - /var/lib/varnish/varnishd:exec
+    networks:
+      - app_network
     restart: unless-stopped
 
   nginx:
@@ -28,8 +32,13 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/conf.d:/etc/nginx/conf.d:ro
     depends_on:
       - varnish
+    networks:
+      - app_network
     restart: unless-stopped
+
+networks:
+  app_network:
