--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,37 @@
+# version: '3.8'
+#
+# services:
+#   astro-server:
+#     build:
+#       context: ./astro-server
+#       dockerfile: Dockerfile
+#     expose:
+#       - "4321"
+#     restart: unless-stopped
+#
+#   varnish:
+#     build:
+#       context: ./varnish-cache
+#       dockerfile: Dockerfile
+#     ulimits:
+#       memlock: -1
+#     ports:
+#       - "8080:80"
+#     environment:
+#       - VARNISH_PURGE_TOKEN=${VARNISH_PURGE_TOKEN}
+#     tmpfs:
+#       - /var/lib/varnish/varnishd:exec
+#     restart: unless-stopped
+#
+#   nginx:
+#     image: nginx:alpine
+#     ports:
+#       - "80:80"
+#     volumes:
+#       - ./nginx-config/conf.d:/etc/nginx/conf.d
+#     depends_on:
+#       - varnish
+#     restart: unless-stopped
 version: '3.8'
 
 services:
@@ -15,9 +49,20 @@ services:
       dockerfile: Dockerfile
     ulimits:
       memlock: -1
-    ports:
-      - "4322:80"
+    expose:
+      - "80"
     environment:
       - VARNISH_PURGE_TOKEN=${VARNISH_PURGE_TOKEN}
     tmpfs:
       - /var/lib/varnish/varnishd:exec
+    restart: unless-stopped
+
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx-config/conf.d:/etc/nginx/conf.d
+    depends_on:
+      - varnish
+    restart: unless-stopped
