--- a/nginx-config/conf.d/default.conf
+++ b/nginx-config/conf.d/default.conf
@@ -33,7 +33,7 @@ server {
 
     # All other requests go to Varnish
     location / {
-        proxy_pass http://varnish;
+        proxy_pass http://varnish:4322;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
