--- a/varnish-cache/default.vcl.template
+++ b/varnish-cache/default.vcl.template
@@ -14,18 +14,13 @@ backend default {
 sub vcl_recv {
     # Handle PURGE requests for cache invalidation
     if (req.method == "PURGE") {
+
         # Check for the secret token
         if (req.http.X-Purge-Token != "$VARNISH_PURGE_TOKEN") {
             return(synth(401, "Unauthorized"));
         }
-        
-        # Special case for root path - use ban to invalidate all variations with query params
-        if (req.url ~ "^/$" || req.url ~ "^/\?") {
-            ban("req.url ~ ^/ && req.http.host == " + req.http.host);
-            return(synth(200, "Ban for root path processed"));
-        }
-        
-        # For all other paths, use regular purge
+
+        # Use purge if supported (Varnish 5.2+) or ban otherwise
         return (purge);
     }
 
