--- a/nginx-config/conf.d/default.conf
+++ b/nginx-config/conf.d/default.conf
@@ -7,28 +7,28 @@ server {
         proxy_pass https://app.lythia.dev;
         proxy_ssl_server_name on;
         proxy_set_header Host app.lythia.dev;
-        rewrite ^/anal/a/script\.js$ /collect/a/script.js break;
+        rewrite ^/anal/a/script\.js$ /collect/analytics/script.js break;
     }
 
     location ~* ^/anal/m/script\.js$ {
         proxy_pass https://app.lythia.dev;
         proxy_ssl_server_name on;
         proxy_set_header Host app.lythia.dev;
-        rewrite ^/anal/m/script\.js$ /collect/m/script.js break;
+        rewrite ^/anal/m/script\.js$ /collect/metrics/script.js break;
     }
 
     location = /anal/a {
         proxy_pass https://app.lythia.dev;
         proxy_ssl_server_name on;
         proxy_set_header Host app.lythia.dev;
-        rewrite ^/anal/a$ /collect/a/report break;
+        rewrite ^/anal/a$ /collect/analytics/report break;
     }
 
     location = /anal/m {
         proxy_pass https://app.lythia.dev;
         proxy_ssl_server_name on;
         proxy_set_header Host app.lythia.dev;
-        rewrite ^/anal/m$ /collect/m/report break;
+        rewrite ^/anal/m$ /collect/metrics/report break;
     }
 
     # All other requests go to Varnish
