--- a/varnish-cache/default.vcl.template
+++ b/varnish-cache/default.vcl.template
@@ -18,7 +18,7 @@ sub vcl_recv {
         # Special case for root path - use ban to invalidate all variations with query params
         if (req.url ~ "^/$" || req.url ~ "^/\?") {
             # Ban the root path and its variations
-            ban("req.url ~ ^/ && req.http.host == " + req.http.host);
+            ban("req.url ~ ^/$ && req.http.host == " + req.http.host);
             # Also ban the search path and its variations
             ban("req.url ~ ^/search && req.http.host == " + req.http.host);
             return(synth(200, "Ban for root and search paths processed"));
