--- a/nginx-config/conf.d/default.conf
+++ b/nginx-config/conf.d/default.conf
@@ -31,9 +31,9 @@ server {
         rewrite ^/anal/m$ /collect/metrics/report break;
     }
 
-    # All other requests go to Varnish
+    # All other requests go to astro
     location / {
-        proxy_pass http://etlegacy-stats-varnish/;
+        proxy_pass http://etlegacy-stats-astro/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
