--- a/nginx-config/conf.d/default.conf
+++ b/nginx-config/conf.d/default.conf
@@ -33,7 +33,7 @@ server {
 
     # All other requests go to astro
     location / {
-        proxy_pass http://etlegacy-stats-astro/;
+        proxy_pass http://etlegacy-stats-isenkram:3000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
