--- a/isenkram/Cargo.toml
+++ b/isenkram/Cargo.toml
@@ -8,4 +8,6 @@ tokio = { version = "1.0", features = ["full"] }
 hyper = { version = "1.0", features = ["full"] }
 hyper-util = { version = "0.1", features = ["full"] }
 http-body-util = "0.1"
-dotenvy = "0.15"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+clap = { version = "4.0", features = ["derive"] }
